# Enterprise_RAG_Platfom

./: .gitattributes  .gitignore  README.md  Rag_Project_Details.md  docker-compose.yml  enterprise_rag.bat  enterprise_rag_demo.bat  rag_enterprise_project_process.txt  render.yaml
backend/: .env.example  alembic.ini  pyproject.toml  requirements-demo.txt  requirements-deploy.txt
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/ws/: chat.py
backend/app/core/: config.py  exceptions.py  logging.py  metrics.py  middleware.py  ratelimit.py  security.py  telemetry.py
backend/app/db/: base.py  session.py
backend/app/db/migrations/: env.py
backend/app/domains/agents/: schemas.py
backend/app/domains/chat/: schemas.py
backend/app/domains/chunking/: tokenizer.py
backend/app/domains/documents/: enums.py
backend/app/domains/evaluation/: schemas.py
backend/app/domains/identity/: permissions.py
backend/app/domains/ingestion/: task_bus.py
backend/app/domains/rag/: citations.py  prompts.py  schemas.py
backend/app/domains/retrieval/: compression.py  fusion.py  query_expansion.py  schemas.py
backend/app/integrations/cache/: embedding_cache.py
backend/app/integrations/embeddings/: base.py  factory.py  fake.py  ollama.py  openai.py  sentence_transformers.py
backend/app/integrations/graphstore/: base.py  factory.py  memory.py  neo4j.py
backend/app/integrations/llm/: base.py  factory.py  fake.py  ollama.py  openai.py
backend/app/integrations/ocr/: base.py  factory.py
backend/app/integrations/storage/: base.py  (+3 more)
backend/app/workers/: celery_app.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_flow.py  test_documents_flow.py  test_search_rag_flow.py
backend/tests/unit/: test_agents.py  test_chat_service.py  test_chunkers.py  test_citations.py  test_demo_mode.py  test_embeddings_vectorstore.py  test_evaluation.py  test_fusion_compression.py  test_graphrag.py  test_health.py  test_index_pipeline.py  test_ingestion_pipeline.py  test_metadata.py  test_oauth.py  test_observability.py  test_parsers.py  test_ratelimit.py  test_rbac.py  test_retrieval_rag.py  test_security.py
(+176 files in other folders)
