[project]
name = "enterprise-rag-backend"
version = "0.1.0"
description = "Enterprise RAG Platform — backend (FastAPI, async, DDD)"
requires-python = ">=3.12"
dependencies = [
    # web / async
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gunicorn>=23.0",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    # persistence
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    # cache / queue
    "redis>=5.2",
    "celery>=5.4",
    # auth / security
    "pyjwt[crypto]>=2.10",
    "passlib[argon2]>=1.7",
    "authlib>=1.3",
    # observability
    "structlog>=24.4",
    "prometheus-client>=0.21",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
    "opentelemetry-exporter-otlp>=1.28",
    # ai / rag (used from Phase 3 onward)
    "qdrant-client>=1.12",
    "neo4j>=5.26",
    "langchain>=0.3",
    "langgraph>=0.2",
    "sentence-transformers>=3.3",
    # document processing (Phase 2)
    "pymupdf>=1.24",
    "pdfplumber>=0.11",
    "unstructured>=0.16",
    # storage
    "boto3>=1.35",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "types-redis",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "A", "SIM", "ASYNC"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Unit tests run by default; integration tests need Postgres: `pytest -m integration`.
addopts = "-ra --cov=app --cov-report=term-missing -m 'not integration'"
markers = [
    "integration: requires live infrastructure (Postgres, etc.)",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
